--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "customize-cra": "^0.2.12",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "mocker-api": "^1.13.1",
     "mockjs": "^1.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
@@ -18,7 +19,8 @@
     "react-dom": "^16.8.4",
     "react-hot-loader": "^4.12.18",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "webpack-build-notifier": "^2.0.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
